--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                 <div class="position-link"><a class="file-link" href="#">Download</a></div>
             </div>
         </div>
-        <div class="total-download">You've alrady downloaded: <span class="size"></span></div>
+        <div class="total-download">You've alrady downloaded: <span class="size">0</span></div>
     </div>
     
 </body>
