--- a/src/index.html
+++ b/src/index.html
@@ -14,23 +14,23 @@
             <div class="position-row">
                 <div class="position-name">DOM Standard</div>
                 <div class="position-size">3.1 Mb</div>
-                <div class="position-link"><a class="file-link" data-link="file1" href="">Download</a></div>
+                <div class="position-link"><a class="file-link" data-link="file1" href="./assets/file1.pdf">Download</a></div>
             </div>
             <div class="position-row">
                 <div class="position-name">fetch Standard</div>
                 <div class="position-size">3.4 Mb</div>
-                <div class="position-link"><a class="file-link" href="#">Download</a></div>
+                <div class="position-link"><a class="file-link" href="./assets/file2.pdf">Download</a></div>
             </div>
             <div class="position-row">
                 <div class="position-name">storage Standard</div>
                 <div class="position-size">310 kb</div>
-                <div class="position-link"><a class="file-link" href="#">Download</a></div>
+                <div class="position-link"><a class="file-link" href="./assets/file3.pdf">Download</a></div>
             </div>
 
             <div class="position-row">
                 <div class="position-name">XML HttpRequest Standard</div>
                 <div class="position-size">833 kb</div>
-                <div class="position-link"><a class="file-link" href="#">Download</a></div>
+                <div class="position-link"><a class="file-link" href="./assets/file4.pdf">Download</a></div>
             </div>
         </div>
         <div class="total-download">You've alrady downloaded: <span class="size">0</span></div>
