--- a/src/index.html
+++ b/src/index.html
@@ -8,29 +8,31 @@
 </head>
 <body>
 
+    
+
     <div class="app-container">
         <div class="download-container">
             <h2>Avalible Files (without sms and registration)</h2>
             <div class="position-row">
                 <div class="position-name">DOM Standard</div>
                 <div class="position-size">3.1 Mb</div>
-                <div class="position-link"><a class="file-link" data-link="file1" href="./assets/file1.pdf">Download</a></div>
+                <div class="position-link"><a class="file-link" data-link="file1" href="data:application/pdf;base64,JVBERi0xLjQNCiXi48/TDQ…hZDI5NWY+XQ0KPj4NCnN0YXJ0eHJlZg0KMTc4DQolJUVPRg0K">Download</a></div>
             </div>
             <div class="position-row">
                 <div class="position-name">fetch Standard</div>
                 <div class="position-size">3.4 Mb</div>
-                <div class="position-link"><a class="file-link" href="./assets/file2.pdf">Download</a></div>
+                <div class="position-link"><a class="file-link" href="data:application/pdf;base64,JVBERi0xLjcNCiXi48/TDQ…4Y2I2Mz5dDQo+Pg0Kc3RhcnR4cmVmDQoxNzgNCiUlRU9GDQo=">Download</a></div>
             </div>
             <div class="position-row">
                 <div class="position-name">storage Standard</div>
                 <div class="position-size">310 kb</div>
-                <div class="position-link"><a class="file-link" href="./assets/file3.pdf">Download</a></div>
+                <div class="position-link"><a class="file-link" href="data:application/pdf;base64,JVBERi0xLjcNCiXi48/TDQ…3ZjljYzI+XQ0KPj4NCnN0YXJ0eHJlZg0KMTc4DQolJUVPRg0K">Download</a></div>
             </div>
 
             <div class="position-row">
                 <div class="position-name">XML HttpRequest Standard</div>
                 <div class="position-size">833 kb</div>
-                <div class="position-link"><a class="file-link" href="./assets/file4.pdf">Download</a></div>
+                <div class="position-link"><a class="file-link" href="data:application/pdf;base64,JVBERi0xLjcNCiXi48/TDQ…jNWE4Nz5dDQo+Pg0Kc3RhcnR4cmVmDQoxNzgNCiUlRU9GDQo=">Download</a></div>
             </div>
         </div>
         <div class="total-download">You've alrady downloaded: <span class="size">0</span></div>
